--- a/RegisterOfFixAssets/Views/DetailMaster/Index.cshtml
+++ b/RegisterOfFixAssets/Views/DetailMaster/Index.cshtml
@@ -14,7 +14,13 @@
             <tr>
                
                 <th>
-                    @Html.DisplayName("Item Name")
+                    @Html.DisplayName("Itemsgyjghmjh mgj jgj gh gjj
+                    ll;l';labelj
+                    ;
+                    j;
+                    ;jgj
+                    ;jgjj
+                    j mhjh Name")
                 </th>
                 <th>
                     @Html.DisplayName("Model & Serial No")
