Add PurchageMode etc

--- a/RegisterOfFixAssets/Views/DetailMaster/Index.cshtml
+++ b/RegisterOfFixAssets/Views/DetailMaster/Index.cshtml
@@ -14,16 +14,10 @@
             <tr>
                
                 <th>
-                    @Html.DisplayName("Itemsgyjghmjh mgj jgj gh gjj
-                    ll;l';labelj
-                    ;
-                    j;
-                    ;jgj
-                    ;jgjj
-                    j mhjh Name")
+                    @Html.DisplayName("Items Name")
                 </th>
                 <th>
-                    @Html.DisplayName("Model & Serial No")
+                    @Html.DisplayName("Serial No")
                 </th>
               
                 <th>
@@ -48,8 +42,9 @@
                 <th>
                     @Html.DisplayName("User Name")
                 </th>
-                 <th>
-                    @Html.DisplayNameFor(model => model.Remarks)
+                <th>
+                    @Html.DisplayName("Purchase Mode")
+                    @*@Html.DisplayNameFor(model => model.Remarks)*@
                 </th>
                 <th>
                     @Html.Display("Action Taken")
