Serial No implemented

--- a/RegisterOfFixAssets/Views/Shared/_Layout.cshtml
+++ b/RegisterOfFixAssets/Views/Shared/_Layout.cshtml
@@ -76,6 +76,7 @@
                     <li>@Html.ActionLink("Report", "Index", "Report", routeValues: null, htmlAttributes: new { style = "color:white" })</li>
                     <li>@Html.ActionLink("Disposed Record", "DisposedList", "Transfer", routeValues: null, htmlAttributes: new { style = "color:white" })</li>
                     <li>@Html.ActionLink("Logout", "Logout", "Login", routeValues: null, htmlAttributes: new { style = "color:white" })</li>
+                    <li>@Html.ActionLink("Change Password", "ChangePassword", "Login", routeValues: null, htmlAttributes: new { style = "color:white" })</li>
 
                     @*<li>@Html.ActionLink("Search", "Index", "MasterSearch", routeValues: null, htmlAttributes: new { style = "color:white" })</li>*@
 
